Adding new elements to Test Framework.
Basic service logic is implemented (see class 'Executor')

--- a/Tests/pytest.ini
+++ b/Tests/pytest.ini
@@ -2,3 +2,5 @@
 markers =
     smoke: smoke tests
     content: verifying message content
+    countries: general sanity tests related to RestCountries service
+    countries_data: tests that verify that the provided data is correct
